# SimpleCLI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: BasicCmds.c  BasicCmds.h  CMakeLists.txt  Command.c  Command.h  Define.h  Mainloop.c  Mainloop.h
test/: CMakeLists.txt  test.c  test.h
